--- a/src/Routes/About.sass
+++ b/src/Routes/About.sass
@@ -3,23 +3,31 @@
 .sobre
     @include content
     justify-content: center
-    gap: 2rem
+    gap: 5rem
 .title
     color: $title-color
+    font-size: 2.6rem
 .aboutPic
     max-width: 40vw
     max-height: 30vh
     border-radius: $box-radius
     box-shadow: -14px 14px 10px 5px $title-color
 .sobre-section
-    max-width: 600px
-    background: $box-color
-    padding: 1.4rem
+    max-width: 700px
+    padding: 0rem
     border-radius: $box-radius
     display: flex
     flex-direction: column
     gap: 1.6rem
     letter-spacing: .1rem
-@media (max-width: 768px)
+    & p
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+        font-size: 1.1rem
+        letter-spacing: 0.05rem
+        text-align: justify
+@media (max-width: 1000px)
     .sobre
         flex-direction: column
+    .aboutPic
+        margin-top: 3rem
+        max-width: 60vw
