--- a/src/Routes/Home.sass
+++ b/src/Routes/Home.sass
@@ -2,13 +2,13 @@
 @import '../Sass/Mixins'
 .home
     @include content
-    justify-content: center
-    gap: 2rem
+
 .presentation
     flex: 2
     display: flex
     flex-direction: column
     gap: 1.5rem
+    margin: 2rem
     & h2
         font-size: 3rem
         font-weight: 800
@@ -17,10 +17,15 @@
         letter-spacing: .1rem
         line-height: 2.2rem
         text-align: justify
-    & .proffesional-links
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+        letter-spacing: 0.05rem
+    & .professional-links
         display: flex
         gap: 1.3rem
         align-items: center
+        & .social-links
+            display: flex
+            gap: 1.3rem
         & a
             color: $txt-color
             & svg
@@ -32,18 +37,18 @@
         & button
             border: none
             & a
-                padding: .8rem 1.2rem
-                border-radius: $btn-radius
                 background: $title-color
+                color: $txt-color
+                width: fit-content
+                font-family: 'Helvetica', sans-serif
+                margin: auto
+                padding: 1rem 1.4rem
+                border-radius: $btn-radius
                 font-size: 1.2rem
                 transition: .3s
-                color: #fff200
-                pointer-events: stroke
-                box-shadow: 0px 0px 10px 0px #575757
                 &:hover
-                    box-shadow: 0px 0px 5px 1px #fffccc
-                    opacity: 1
-                    color: $txt-color
+                    box-shadow: 0px 0px 4px 4px #1a5bb1
+                    scale: 1.05
 .profilePic
     position: relative
     flex: 1
@@ -53,6 +58,8 @@
     box-shadow: 18px 15px 8px 1px $title-color
     transition: .6s
     cursor: pointer
+    border-top: 6px solid $box-color
+    border-left: 6px solid $box-color
     &:hover
         scale: 1.05
 
@@ -65,6 +72,13 @@
         gap: 4rem
     .presentation
         flex: 0
+        flex-wrap: wrap
+        & h2
+            font-size: 2rem
     .profilePic
         flex: 0
         width: 250px
+    .professional-links
+        flex-direction: column
+        & button
+            margin-top: 1.5rem
