--- a/src/Sass/Mixins.sass
+++ b/src/Sass/Mixins.sass
@@ -3,16 +3,14 @@
 @mixin center
     display: flex
     align-items: center
-    justify-content: center
-    margin: auto
+    justify-content: flex-start
     padding: 0 1rem
 
 @mixin content
-    position: absolute
     width: 100%
     min-height: 100vh
     display: flex
-    padding: 5rem
+    padding: 5rem 2rem
     justify-content: space-between
     align-items: center
     gap: 2rem
