--- a/src/components/Navbar.sass
+++ b/src/components/Navbar.sass
@@ -3,10 +3,10 @@
     display: flex
     justify-content: space-between
     align-items: center
-    padding: 0 40px
+    padding: 20px 40px
     position: fixed
     width: 100%
-    height: 10vh
+    background: $title-color
     z-index: 999
     &-logo
         font-size: 2.3rem
@@ -23,17 +23,22 @@
             font-size: 1.6rem
             cursor: pointer
 .navbar-menu-mobile
-    display: none
+    overflow: hidden
+    height: 0px
+    top: -100px
+    transition: .3s
 .active
     display: flex
     justify-content: center
     align-items: center
-    min-height: 50vh
+    min-height: 350px
+    top: 0
+    margin-bottom: 2rem
     text-align: center
     position: relative
     width: 100%
     z-index: 1
-    background: $bg-color
+    background: $title-color
     & ul
         list-style: none
         display: flex
