--- a/src/Routes/Contact.sass
+++ b/src/Routes/Contact.sass
@@ -29,7 +29,7 @@
                 justify-content: center
                 align-items: center
                 & svg
-                    color: #a7a7a7
+                    color: #20a4fc
                     font-size: 2rem
             & a
                 color: $title-color
