--- a/src/Sass/Mixins.sass
+++ b/src/Sass/Mixins.sass
@@ -3,8 +3,7 @@
 @mixin center
     display: flex
     align-items: center
-    justify-content: flex-start
-    padding: 0 1rem
+    justify-content: start
 
 @mixin content
     width: 100%
