--- a/src/components/Navbar.sass
+++ b/src/components/Navbar.sass
@@ -24,18 +24,18 @@
             cursor: pointer
 .navbar-menu-mobile
     overflow: hidden
+    display: fixed
     height: 0px
-    top: -100px
     transition: .3s
 .active
+    position: fixed
     display: flex
     justify-content: center
     align-items: center
-    min-height: 350px
+    height: 100vh
     top: 0
     margin-bottom: 2rem
     text-align: center
-    position: relative
     width: 100%
     z-index: 1
     background: $title-color
