--- a/src/Routes/Projects.sass
+++ b/src/Routes/Projects.sass
@@ -4,8 +4,7 @@
 .projects
     @include content
     flex-direction: column
-
-    margin-top: 3rem
+    margin: 2rem 0
 
 .project
     display: flex
