--- a/src/Sass/Mixins.sass
+++ b/src/Sass/Mixins.sass
@@ -7,9 +7,9 @@
 
 @mixin content
     width: 100%
-    min-height: 100vh
+    min-height: calc(100vh - 8rem)
     display: flex
-    padding: 5rem 2rem
+    padding: 0rem 2rem
     justify-content: space-between
     align-items: center
     gap: 2rem
