--- a/src/pages/Projects.sass
+++ b/src/pages/Projects.sass
@@ -16,9 +16,10 @@
     padding: 2rem
     border-radius: $box-radius
     &-img
+        max-width: 500px
+        max-height: 400px
         width: 100%
-        flex: 1
-        height: 30vh
+        height: 100%
         border-radius: $btn-radius
         box-shadow: 0px 0px 10px 4px #2b2b2bb7
         transition: .5s
@@ -26,7 +27,6 @@
         &:hover
             scale: 1.02
     &-desc
-        flex: 2
         max-width: 600px
         display: flex
         flex-direction: column
