--- a/src/pages/Projects.sass
+++ b/src/pages/Projects.sass
@@ -17,9 +17,9 @@
     border-radius: $box-radius
     &-img
         max-width: 500px
-        max-height: 400px
         width: 100%
-        height: 100%
+        max-height: 300px
+        object-fit: cover
         border-radius: $btn-radius
         box-shadow: 0px 0px 10px 4px #2b2b2bb7
         transition: .5s
@@ -33,6 +33,7 @@
         gap: .8rem
         & h3
             font-size: 1.8rem
+            text-transform: capitalize
         & p
             font-size: 1.1rem
             text-align: justify
@@ -66,6 +67,20 @@
             transition: .3s
             &:hover
                 color: #ffffff86
+
+.tech
+    background: $txt-color
+    padding: .425rem
+    border-radius: $btn-radius
+    font-family: 'Helvetica', sans-serif
+    color: $box-color
+    font-size: 1.2rem
+    font-weight: 500
+    text-transform: uppercase
+    transition: 0.3s
+    &:hover
+        box-shadow: 0px 0px 4px 4px #1a5bb1
+        scale: 1.05
 
 @media (max-width: 1000px)
     .project
