--- a/src/pages/Projects.sass
+++ b/src/pages/Projects.sass
@@ -15,22 +15,45 @@
     background: $box-color
     padding: 2rem
     border-radius: $box-radius
-    &-img
-        max-width: 500px
-        width: 100%
-        max-height: 300px
-        object-fit: cover
-        border-radius: $btn-radius
-        box-shadow: 0px 0px 10px 4px #2b2b2bb7
-        transition: .5s
-        cursor: default
-        &:hover
-            scale: 1.02
+    &-infos
+        display: flex
+        flex-direction: column
+        gap: 2rem
+        align-items: center
+        & img
+            max-width: 500px
+            width: 100%
+            max-height: 300px
+            object-fit: cover
+            border-radius: $btn-radius
+            box-shadow: 0px 0px 10px 4px #2b2b2bb7
+            transition: .5s
+            cursor: default
+            &:hover
+                scale: 1.02
+        & .createdAT
+            background: $title-color
+            padding: .425rem
+            border-radius: $btn-radius
+            color: $txt-color
+            font-weight: bold
+            font-size: 1.3rem
+            text-align: center
+            transition: .3s ease-in-out
+            &:hover
+                scale: 1.2
+                background: #0380fdb7
     &-desc
         max-width: 600px
         display: flex
         flex-direction: column
         gap: .8rem
+        & .topics
+            display: flex
+            flex-wrap: wrap
+            gap: 1rem
+            justify-content: center
+            align-items: center
         & h3
             font-size: 1.8rem
             text-transform: capitalize
@@ -76,10 +99,11 @@
     color: $box-color
     font-size: 1.2rem
     font-weight: 500
+    text-align: center
     text-transform: uppercase
     transition: 0.3s
     &:hover
-        box-shadow: 0px 0px 4px 4px #1a5bb1
+        box-shadow: 0px 0px 4px 4px #bbbb
         scale: 1.05
 
 @media (max-width: 1000px)
