--- a/src/App.sass
+++ b/src/App.sass
@@ -3,3 +3,15 @@
 body
     background: $bg-color
     color: $txt-color
+
+
+.app
+    height: 100%
+    min-height: 100dvh
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    gap: 1rem
+
+main
+    flex: 1
