--- a/src/components/footer.sass
+++ b/src/components/footer.sass
@@ -2,7 +2,7 @@
 footer
     width: 100%
     text-align: center
-    padding: 1rem 0
+    padding: .425rem 0
     background: $box-color
     font-size: 1.1rem
     font-weight: 700
