--- a/src/pages/projects/Projects.sass
+++ b/src/pages/projects/Projects.sass
@@ -1,10 +1,14 @@
-@import '../Sass/Mixins'
-@import '../Sass/Variables'
+@import '../../Sass/Variables'
+@import '../../Sass/Mixins'
 
 .projects
-    @include content
+    display: flex
     flex-direction: column
-    margin: 2rem 0
+    gap: 3rem
+    margin: auto
+
+.title
+    text-align: center
 
 .project
     display: flex
